--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "node-rsa": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
